<resources>
    <string name="app_name">Lyrics App</string>

    <!-- NAVIGATION -->
    <string name="nav_fragment_history">Lyric History</string>
    <string name="nav_fragment_search_lyric">Search Lyric</string>

    <!-- ERRORS -->
    <string name="error_network_not_available">No connection</string>
    <string name="error_mandatory_field">Mandatory field</string>
    <string name="error_song_not_found">"Can't find this song"</string>

    <!-- HISTORY -->
    <string name="menu_history_search">Search</string>
    <string name="history_empty_list_title">Get Started</string>
    <string name="history_empty_list_description">
        Find the lyrics of your favorite songs and keep them on your smartphone
    </string>
    <string name="history_empty_list_action">Find a Song</string>

    <!-- SEARCH LYRIC -->
    <string name="artist_prompt">Artist</string>
    <string name="song_title_prompt">Song title</string>
    <string name="action_search">Search</string>
    <string name="recent_search">Recent Search</string>

    <!-- LYRIC -->
    <string name="artist_title">By %1$s</string>
    <string name="search_at">Search at</string>
</resources>